--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
 /* Base */
 body {
   line-height: 1.7;
-  color: #777;
+  color: #000;
   font-weight: 300;
   font-size: 1rem;
-  background: #000; }
+  background: #fff; }
 
 ::-moz-selection {
-  background: #000;
-  color: #fff; }
+  background: #fff;
+  color: #000; }
 
 ::selection {
-  background: #000;
-  color: #fff; }
+  background: #fff;
+  color: #000; }
 
 a {
   -webkit-transition: .3s all ease;
@@ -25,7 +25,7 @@ a {
   color: #000 !important; }
 
 .bg-black {
-  background: #000 !important; }
+  background: #fff !important; }
 
 .site-wrap:before {
   -webkit-transition: .3s all ease-in-out;
