--- a/css/style.css
+++ b/css/style.css
@@ -103,12 +103,14 @@ a {
 .bg-black {
   background: #000; }
 
+/* Contact form input fields: set text color to black */
 .form-control {
   height: 43px;
   border-radius: 0;
   background: transparent;
   border-color: #777;
-  color: #fff !important; }
+  color: #000 !important;
+}
   .form-control:active, .form-control:focus {
     border-color: #20c997;
     background: transparent; }
