--- a/css/style.css
+++ b/css/style.css
@@ -108,9 +108,9 @@ a {
 .form-control {
   height: 43px;
   border-radius: 0;
-  background: #000 !important;
+  background: #fff !important;
   border-color: #000 !important;
-  color: #fff !important;
+  color: #000 !important;
 }
   .form-control:active, .form-control:focus {
     border-color: #20c997;
