--- a/css/style.css
+++ b/css/style.css
@@ -1333,7 +1333,7 @@ img:hover {
 .section-category,
 .site-block-category {
   background: #fff !important;
-  color: #000 !important;
+  color: #ff0000 !important;
   border: 1px solid #eee;
 }
 
