--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ a {
     position: absolute;
     left: 0;
     top: 0;
-    height: 100%;
+    height: 72px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -285,7 +285,7 @@ a {
 }
 .site-navbar .site-logo img {
     display: block;
-    max-height: 60%;
+    max-height: 56px;
     max-width: 160px;
     width: auto;
     height: auto;
