--- a/css/style.css
+++ b/css/style.css
@@ -687,9 +687,10 @@ a {
 }
 @media (max-width: 991.98px) {
   .site-blocks-cover, .site-blocks-cover .row {
-    min-height: unset !important;
-    height: auto !important;
-    max-height: unset !important;
+    min-height: 220px !important;
+    height: 38vh !important;
+    max-height: 420px !important;
+    display: block !important;
   }
   .landing-mobile-img {
     display: none !important;
@@ -697,6 +698,20 @@ a {
   .site-blocks-cover .slide-one-item,
   .site-blocks-cover .owl-carousel,
   .site-blocks-cover .home-slider {
+    display: block !important;
+    min-height: 220px !important;
+    height: 38vh !important;
+    max-height: 420px !important;
+  }
+  .site-blocks-cover .slide-item {
+    min-height: 220px !important;
+    height: 38vh !important;
+    max-height: 420px !important;
+    width: 100vw !important;
+    background-size: cover !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-color: #000 !important;
     display: block !important;
   }
 }
