--- a/css/style.css
+++ b/css/style.css
@@ -1,226 +1,5 @@
-/* Base */
-body {
-  line-height: 1.7;
-  color: #000;
-  font-weight: 300;
-  font-size: 1rem;
-  background: #fff;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  color: #000 !important;
-}
-
-
-/* Section headings on landing page (index.html) should be white */
-
-/* Section headings default to black on all pages */
-.site-section-heading,
-.site-section-heading:after,
-
-.site-section-heading.text-center:after {
-  color: #000 !important;
-}
-
-
-section h1, section h2, section h3, section h4, section h5, section h6 {
-  color: #000 !important;
-}
-
-
-/* Main nav and dropdown: black text, red on hover, white background for dropdown */
-.site-navbar .site-navigation .site-menu > li > a,
-.site-navbar .site-navigation .site-menu .has-children > a,
-.site-navbar .site-navigation .site-menu .has-children .dropdown > li > a {
-  color: #111 !important;
-}
-.site-navbar .site-navigation .site-menu > li > a:hover,
-.site-navbar .site-navigation .site-menu > li > a:focus,
-.site-navbar .site-navigation .site-menu .has-children .dropdown > li > a:hover,
-.site-navbar .site-navigation .site-menu .has-children .dropdown > li > a:focus {
-  color: #d32f2f !important;
-}
-.site-navbar .site-navigation .site-menu .has-children .dropdown {
-  background: #fff !important;
-}
-
-.site-menu[data-class="social"] a,
-.site-menu[data-class="social"] a:hover {
-  color: #000 !important;
-}
-
-.site-mobile-menu .site-nav-wrap a,
-.site-mobile-menu .site-nav-wrap a:hover,
-.site-mobile-menu .site-nav-wrap li.active > a {
-  color: #000 !important;
-}
-
-/* Remove any white/rgba(255,255,255,...) color from nav and menu items */
-
-::-moz-selection {
-  background: #fff;
-  color: #000; }
-
-::selection {
-  background: #fff;
-  color: #000; }
-
-a {
-  -webkit-transition: .3s all ease;
-  -o-transition: .3s all ease;
-  transition: .3s all ease; }
-  a:hover {
-    text-decoration: none; }
-
-.text-black {
-  color: #000 !important; }
-
-.bg-black {
-  background: #fff !important; }
-
-.site-wrap:before {
-  -webkit-transition: .3s all ease-in-out;
-  -o-transition: .3s all ease-in-out;
-  transition: .3s all ease-in-out;
-  background: rgba(0, 0, 0, 0.6);
-  content: "";
-  position: absolute;
-  z-index: 2000;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0;
-  visibility: hidden; }
-
-.offcanvas-menu .site-wrap {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  z-index: 2;
-  overflow: hidden; }
-  .offcanvas-menu .site-wrap:before {
-    opacity: 1;
-    visibility: visible; }
-
-.btn {
-  border-radius: 0; }
-  .btn:hover, .btn:active, .btn:focus {
-    outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none; }
-  .btn.btn-black {
-    color: #fff;
-    background-color: #000; }
-    .btn.btn-black:hover {
-      color: #000;
-      background-color: #fff; }
-
-.line-height-1 {
-  line-height: 1 !important; }
-
-.bg-black {
-  background: #000; }
-
-/* Contact form input fields: set text color to black */
-/* Contact form input fields: set text color to black, background to black, and border to black */
-.form-control {
-  height: 43px;
-  border-radius: 0;
-  background: #fff !important;
-  border-color: #000 !important;
-  color: #000 !important;
-}
-  .form-control:active, .form-control:focus {
-    border-color: #20c997;
-    background: transparent; }
-  .form-control:hover, .form-control:active, .form-control:focus {
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important; }
-
-.site-section {
-  padding: 2.5em 0; }
-  @media (min-width: 768px) {
-    .site-section {
-      padding: 5em 0; } }
-  .site-section.site-section-sm {
-    padding: 4em 0; }
-
-.site-section-heading {
-  color: #fff;
-  position: relative;
-  font-size: 2.5rem; }
-  @media (min-width: 768px) {
-    .site-section-heading {
-      font-size: 4rem; } }
-  .site-section-heading:after {
-    content: "";
-    left: 0%;
-    bottom: 0;
-    position: absolute;
-    width: 100px;
-    height: 1px;
-    background: #000; }
-  .site-section-heading.text-center:after {
-    content: "";
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    content: "";
-    left: 50%;
-    bottom: 0;
-    position: absolute;
-    width: 100px;
-    height: 1px;
-    background: #000; }
-
-.border-top {
-  border-top: 1px solid #edf0f5 !important; }
-
-.site-footer {
-  padding: 2em 0;
-  background: #222;
-  border-top: 1px solid #444;
-}
-.site-footer p {
-  color: #bbb;
-  margin-bottom: 0;
-  font-size: 1.05rem;
-}
-.site-footer h2, .site-footer h3, .site-footer h4, .site-footer h5 {
-  color: #fff;
-}
-.site-footer a {
-  color: #20c997;
-  text-decoration: underline;
-  transition: color 0.2s;
-}
-.site-footer a:hover {
-  color: #fff;
-}
-.site-footer ul li {
-  margin-bottom: 10px;
-}
-.site-footer .footer-heading {
-  font-size: 20px;
-  color: #fff;
-}
-
-.bg-text-line {
-  display: inline;
-  background: #000;
-  -webkit-box-shadow: 20px 0 0 #000, -20px 0 0 #000;
-  box-shadow: 20px 0 0 #000, -20px 0 0 #000; }
-
-.text-white-opacity-05 {
-  color: rgba(255, 255, 255, 0.5); }
-
-.text-black-opacity-05 {
-  color: rgba(0, 0, 0, 0.5); }
-
-.hover-bg-enlarge {
   overflow: hidden;
-  position: relative; }
+  position: relative;
   @media (max-width: 991.98px) {
     .hover-bg-enlarge {
       height: auto !important; } }
@@ -1401,11 +1180,13 @@ body, html {
     /* IE5+ */
     -webkit-filter: grayscale(1);
     /* Webkit Nightlies & Chrome Canary */
-    -webkit-transition: all .1s ease-in-out; }
+    -webkit-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out; }
   .image-wrap-2:hover img {
     filter: none;
     -webkit-filter: grayscale(0);
-    -webkit-transform: scale(1.01); }
+    -webkit-transform: scale(1.01);
+    transform: scale(1.01); }
   .image-wrap-2 .image-info {
     text-align: center;
     position: absolute;
@@ -1462,11 +1243,13 @@ body, html {
     /* IE5+ */
     -webkit-filter: grayscale(1);
     /* Webkit Nightlies & Chrome Canary */
-    -webkit-transition: all .1s ease-in-out; }
+    -webkit-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out; }
   #lightgallery .item:hover img {
     filter: none;
     -webkit-filter: grayscale(0);
-    -webkit-transform: scale(1.01); }
+    -webkit-transform: scale(1.01);
+    transform: scale(1.01); }
 
 img {
   /* filter: url(filters.svg#grayscale); Firefox 3.5+ */
@@ -1474,11 +1257,13 @@ img {
   /* IE5+ */
   -webkit-filter: grayscale(1);
   /* Webkit Nightlies & Chrome Canary */
-  -webkit-transition: all .1s ease-in-out; }
+  -webkit-transition: all .1s ease-in-out;
+  transition: all .1s ease-in-out; }
   img:hover {
     filter: none;
     -webkit-filter: grayscale(0);
-    -webkit-transform: scale(1.01); }
+    -webkit-transform: scale(1.01);
+    transform: scale(1.01); }
 
 /* Disable grayscale-to-color transition on image hover */
 .image-wrap-2 img,
